--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,13 @@ ul {
     color: #222;
 }
 
+ol {
+    font-size: 1.1em;
+    font-family: 'Public Sans', sans-serif;
+    line-height: 1.4em;
+    color: #222;
+}
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
