--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,5 +23,6 @@
         		<li><a href="http://brunston.io/">© 2020 Brunston Poon</a>
             </ul>
 		</footer>
+        {% include analytics.html %}
 	</body>
 </html>
